fix sidebar z-index

--- a/src/app/components/students/students.component.scss
+++ b/src/app/components/students/students.component.scss
@@ -56,7 +56,7 @@
   .sidebar {
     width: 0;
     transition: width 0.2s ease;
-    z-index: 1000;
+    z-index: 1040;
 
     &.open {
       width: 100%;
